--- a/package.json
+++ b/package.json
@@ -21,11 +21,12 @@
   },
   "homepage": "https://github.com/LeenaCruz/ReactPortfolio#readme",
   "dependencies": {
+    "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.2"
-  },  
+  },
   "devDependencies": {
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
